Presentation and computation graphs.

--- a/aspects_algébriques/aspects_algébriques.tex
+++ b/aspects_algébriques/aspects_algébriques.tex
@@ -407,6 +407,8 @@ Nous souhaitons abstraire les méthodes précédentes à travers une strucuture 
 		
 		\item Les matrices n'ont pas de structure algébrique évidente non plus (peut-être que les sommes/différences ont un sens lors des modifications manuelles des modèles.).
 		
-	\end{itemize}		
+		\item Le problème de l'algébrisation des fonctions d'activation reste entier.
+		
+	\end{itemize}
 
 \end{document}
